Fix image alignment of image-text
Before the change, if the texts were different in size, the
images not be aligned as intended. With this change, it will be
correctly displayed.

--- a/style.css
+++ b/style.css
@@ -127,20 +127,19 @@ body {
     .content .information .text-images {
         display: flex;
         justify-content: center;
-        align-items: center;
-        gap: 20px;
+        gap: 30px;
         margin-bottom: 40px;
     }
 
     .content .information .text-image {
         display: flex;
         flex-direction: column;
+        width: 120px;
         gap: 5px;
     }
 
     .content .information .text-image img {
-        flex: 1 auto;
-        width: 120px;
+        width: auto;
         height: auto;
         border: 3px solid #3882F6;
         border-radius: 7px;
